# Practise_Make_Perfect_C

./: CMakeLists.txt  main.c
src/: a_test.c  a_test.h  headers.h
src/basic_c_lang_knowledge/: basic_c_lang_knowledge.c  basic_c_lang_knowledge.h
src/file_operation/: file_operation.c  file_operation.h
